--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -54,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "node-sass": "^4.14.0"
+    "node-sass": "^4.14.0",
+    "redux-devtools": "^3.5.0"
   }
 }
