--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "snakecase-keys": "^3.2.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
