--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "camelcase-keys": "^6.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
