--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
